# tsisa_lab02

./: .gitignore  CMakeLists.txt  README.md  output.txt
include/: old_randomSearcher.hpp  randomSearcher.hpp
sources/: main.cpp  old_randomSearcher.cpp  randomSearcher.cpp  searcher.cpp
